1st stage metrics

--- a/first_stage.ipynb
+++ b/first_stage.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "803caffb",
    "metadata": {},
    "outputs": [
@@ -115,7 +115,7 @@
        "MersenneTwister(123)"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "b3847d58",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "308e88fb",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "one_hot (generic function with 1 method)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "a5178bd9",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "fbca9384",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "47a54eaf",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "d40c7192",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "94ac3708",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "eb6a792f",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "id": "c32b86d2",
    "metadata": {
     "scrolled": false
@@ -264,7 +264,7 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "id": "ff166715",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 18,
    "id": "61943636",
    "metadata": {
     "scrolled": true
@@ -304,11 +304,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Any[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 253\n",
-       "Depth:  27"
+       "Leaves: 252\n",
+       "Depth:  30"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,17 +319,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 19,
    "id": "18b2ead6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.946498819826908"
+       "0.9457120377655389"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,17 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "id": "19f7d974",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9845243513882567"
+       "0.9908966772872099"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 21,
    "id": "667f06d3",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        " 20"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "3b52c010",
    "metadata": {},
    "outputs": [],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "b47cff0e",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 24,
    "id": "bfb8eda9",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 25,
    "id": "0cfb2510",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "id": "1919104a",
    "metadata": {},
    "outputs": [],
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "id": "f286f9b9",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "id": "44a36b26",
    "metadata": {
     "scrolled": false
@@ -472,7 +472,7 @@
      "data": {
       "text/plain": [
        "DecisionTreeClassifier\n",
-       "max_depth:                -1\n",
+       "max_depth:                15\n",
        "min_samples_leaf:         1\n",
        "min_samples_split:        2\n",
        "min_purity_increase:      0.0\n",
@@ -482,18 +482,18 @@
        "root:                     nothing"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = DecisionTreeClassifier()"
+    "model = DecisionTreeClassifier(max_depth=15)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 34,
    "id": "60d3c5ee",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "id": "fd93cc5f",
    "metadata": {
     "scrolled": true
@@ -514,7 +514,7 @@
      "data": {
       "text/plain": [
        "DecisionTreeClassifier\n",
-       "max_depth:                -1\n",
+       "max_depth:                15\n",
        "min_samples_leaf:         1\n",
        "min_samples_split:        2\n",
        "min_purity_increase:      0.0\n",
@@ -522,11 +522,11 @@
        "n_subfeatures:            0\n",
        "classes:                  Any[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "root:                     Decision Tree\n",
-       "Leaves: 252\n",
-       "Depth:  27"
+       "Leaves: 166\n",
+       "Depth:  15"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,17 +537,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "id": "785886c9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.946498819826908"
+       "0.9461054287962234"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,17 +560,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "id": "9af3c5ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9845243513882567"
+       "0.9733727810650887"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 38,
    "id": "87f3c342",
    "metadata": {},
    "outputs": [
@@ -599,11 +599,11 @@
        "classes:             Any[\"B\", \"C\", \"J\", \"M\", \"P\", \"T\", \"X\"]\n",
        "ensemble:            Ensemble of Decision Trees\n",
        "Trees:      100\n",
-       "Avg Leaves: 356.74\n",
-       "Avg Depth:  37.66"
+       "Avg Leaves: 353.41\n",
+       "Avg Depth:  36.83"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,17 +615,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 39,
    "id": "532a7ebf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9488591660110149"
+       "0.9492525570416994"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,17 +636,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 40,
    "id": "9d8e8e35",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9845243513882567"
+       "0.9733727810650887"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
